<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    tools:context="${packageName}.${activityClass}" >
    
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="1414dp"
        android:orientation="vertical"
        android:id="@+id/addons_activity_content" >

        <TextView
            android:id="@+id/adapter_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addons_info"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/getAddon" 
            android:onClick="getAddons"/>

        <TextView
            android:id="@+id/title_installed_addons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_installed_addons"
        	android:layout_marginTop="10dp"
        	android:layout_marginBottom="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    
    </TableLayout>

</ScrollView>
